force-app/main/default/objects/Declaration_Rates__c/Declaration_Rates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Declaration Rates</label>
</CustomObject>