force-app/main/default/objects/Declaration_Rates__c/fields/Annual_Declaration_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Declaration_Rate__c</fullName>
    <label>Annual Declaration Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>