force-app/main/default/objects/Declaration_Rates__c/fields/Half_Yearly_Declaration_Rate__c.field-meta.xml
<CustomField>
    <fullName>Half_Yearly_Declaration_Rate__c</fullName>
    <label>Half Yearly Declaration Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>