force-app/main/default/objects/Declaration_Rates__c/fields/Q2_Declaration_Rate__c.field-meta.xml
<CustomField>
    <fullName>Q2_Declaration_Rate__c</fullName>
    <label>Q2 Declaration Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>